# CF-Post-Meta Changelog

## 2.0.4 (in dev)
- jQuery 10 compatibility for checkbox/radio button comparisons
- An entered value of 0 no longer gets replaced with a default value (an empty string still does)

## 2.0.3
- Add ability for custom JS in the head of a meta box via filter
- Fix a few PHP notices that were thrown on edge cases
- Spacing fixes
- Block repeaters are now sent and saved with the prefix as to not populate $_POST['blocks']

## 2.0.2
- Adding support for keeping this plugin in the theme/plugins folder (parent theme support only).
- Added support for extra attributes on text-inputs.
- Added ability to set default values on all element types.
- Silencing potential PHP notices.
- CSS hardening.
- Added config option for more friendly repeater block buttons.
- Allowing block_class for repeater block group styling.

## 2.0.1
- Updated Readme, Changelog to indicate that it was successfully tested on WP3.0. 

## 2.0
- Tested on WP3.0

## 1.9.1
- Tagging for release

## 1.9
- Dumping the TinyMCE editor in favor of the CK Editor.

## 1.8.2
- Fix a bug that could foreach over a non-array variable.

## 1.8.1
- Making the "Add Another..." text a configurable part of the settings for block types.

## 1.8
- Redifining plugin location, so that plugin can be utilized in MU-Plugins or Plugins directory
- Displaying the "help" that we define in the settings config array.
- Created new file (cf-input-settings-types-class.php) specifically for extensions of the input type classes, specifically for use with settings page.
- Fixed bug in "title" display for block types (it wasn't showing at all)

## 1.7.1
- Adds filters
- proper version #

## 1.7
- Adds support for radio buttons

## 1.6.2 
- Suppress PHP warning message

## 1.6.1 
- deprecate `save_as_block` option for repeater elements. Repeater elements always save as block groups. Default is true.
- Add README & CHANGELOG files to plugin
- removed sample config file & config example in favor of README.txt

## 1.6 